Add new strings: Prem + Normal

--- a/resources/language/Hebrew/strings.po
+++ b/resources/language/Hebrew/strings.po
@@ -927,3 +927,11 @@ msgstr "[B]קובננט[/B] : ניקוי היסטוריית חיפוש..."
 msgctxt "#32605"
 msgid "Click to clear search history"
 msgstr "לחץ כדי לנקות את היסטוריית החיפוש"
+
+msgctxt "#32606"
+msgid "Prem"
+msgstr "פרמיום"
+
+msgctxt "#32607"
+msgid "Normal"
+msgstr "נורמלי"
