--- a/resources/language/Italian/strings.po
+++ b/resources/language/Italian/strings.po
@@ -849,7 +849,7 @@ msgstr "Visti di recente"
 
 msgctxt "#32587"
 msgid "Show Extra Source Info"
-msgstr "Mostra informazioni da fonti aggiuntive"  
+msgstr "Mostra informazioni da fonti aggiuntive"
 
 msgctxt "#32588"
 msgid "Premium Source Identifier Color"
@@ -917,8 +917,16 @@ msgstr "Nuova ricerca..."
 
 msgctxt "#32604"
 msgid "[B]COVENANT[/B] : Clear search history..."
-msgstr "[B]COVENANT[/B] : Cancella cronologia ricerche..."
+msgstr "[B]COVENANT[/B] : Elimina cronologia ricerche..."
 
 msgctxt "#32605"
 msgid "Click to clear search history"
-msgstr "Clicca per cancellare la cronologia ricerche"
+msgstr "Clicca per eliminare la cronologia ricerche"
+
+msgctxt "#32606"
+msgid "Prem"
+msgstr "Premium"
+
+msgctxt "#32607"
+msgid "Normal"
+msgstr "Normale"
