--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -934,3 +934,11 @@ msgstr ""
 msgctxt "#32607"
 msgid "Normal"
 msgstr ""
+
+msgctxt "#32608"
+msgid "Client ID"
+msgstr ""
+
+msgctxt "#32609"
+msgid "Cient Secret"
+msgstr ""
